# Search

./: Cargo.toml  README.md  justfile
.github/: setup-workspace.sh
.github/workflows/: publish-node.yml  publish-python.yml
examples/: basic_search.rs  chinese_search.rs
sdk/node/: .gitignore  .npmignore  Cargo.toml  package-lock.json  package.json  tsconfig.json  vitest.config.ts
sdk/node/lib/: errors.ts  index.ts  native.ts  search.ts  types.ts
sdk/node/npm/darwin-arm64/: package.json
sdk/node/npm/darwin-x64/: package.json
sdk/node/npm/linux-arm64-gnu/: package.json
sdk/node/npm/linux-arm64-musl/: package.json
sdk/node/npm/linux-x64-gnu/: package.json
sdk/node/npm/linux-x64-musl/: package.json
sdk/node/npm/win32-x64-msvc/: package.json
sdk/node/src/: lib.rs  search.rs  types.rs  util.rs
sdk/node/tests/: search.test.ts
sdk/python/: .gitignore  Cargo.toml  build.rs  pyproject.toml
sdk/python/a3s_search/: __init__.py  errors.py  search.py  types.py
sdk/python/src/: lib.rs  search.rs  types.rs  util.rs
sdk/python/tests/: test_search.py
src/: aggregator.rs  browser.rs  browser_setup.rs  engine.rs  error.rs  fetcher.rs  fetcher_http.rs  lib.rs  main.rs  proxy.rs  query.rs  result.rs  search.rs
src/engines/: baidu.rs  bing_china.rs  brave.rs  duckduckgo.rs  google.rs  mod.rs  so360.rs  sogou.rs  wikipedia.rs
tests/: integration.rs
