[package]
name = "a3s-search"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository = "https://github.com/A3S-Lab/Search"
authors.workspace = true
description = "Embeddable meta search engine library with CLI and proxy pool support"

[[bin]]
name = "a3s-search"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Async utilities
async-trait.workspace = true
futures.workspace = true

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "socks"] }

# HTML parsing
scraper = "0.22"

# URL handling
url = "2"
urlencoding = "2"

# Regex
regex = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging for CLI
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test.workspace = true
