[package]
name = "a3s-search-python"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[workspace]

[lib]
name = "_a3s_search"
crate-type = ["cdylib"]

[dependencies]
a3s-search = { path = "../..", default-features = false, features = [] }
pyo3 = { version = "0.22", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.22", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
lto = true
strip = "symbols"
