[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "a3s-search"
version = "0.1.0"
description = "Native Python bindings for a3s-search meta search engine"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["search", "meta-search", "duckduckgo", "brave", "wikipedia", "native"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]

[tool.maturin]
features = []
module-name = "a3s_search._a3s_search"
python-source = "."

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
